welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: reassignment to val
if(vacation=false) {
           ^alarmClock:12: error: not found: value off
		return off
                       ^